--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "clipboard": "^2.0.6",
     "core-js": "^3.6.4",
     "js-cookie": "^2.2.1",
+    "md5": "^2.2.1",
+    "nprogress": "^0.2.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
+    "vuetify-toast-snackbar": "^0.6.1",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
