--- a/package.json
+++ b/package.json
@@ -10,6 +10,23 @@
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
+  "author": "chenzhen <546369005@qq.com>",
+  "keywords": [
+    "vue",
+    "vuetify",
+    "vue-router",
+    "vue-cli"
+  ],
+  "description": "基于vuetify搭建开箱即用模板项目",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/parajs/vuetify-template.git"
+  },
+  "bugs": {
+    "url": "https://github.com/parajs/vuetify-template/issues"
+  },
+  "homepage": "https://github.com/parajs/vuetify-template",
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
