--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "md5": "^2.2.1",
     "nprogress": "^0.2.0",
     "register-service-worker": "^1.7.1",
+    "svg-sprite-loader": "^5.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
